# FinanceSimulation

./: .gitignore  .readthedocs.yaml  .travis.yml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
.github/workflow/: publish-to-pypi.yaml  tests.yaml
.github/workflows/: tests.yaml
docs/: README.md  conf.py  index.rst  make_docs.py  modules.rst  test_docs.py
finsim/: retrieve_stock_symbols_cli.py
finsim/data/: __init__.py  finnhub.py  fit.py  preader.py  quandl.py
finsim/data/native/: numbafit.py
finsim/estimate/: constants.py  downrisk.py  fit.py  risk.py
finsim/estimate/native/: __init__.py  cythonfit.c  cythonfit.pyx  cythonrisk.c  cythonrisk.pyx  fortranfit.f90  fortranfit.pyf  fortranrisk.f90  fortranrisk.pyf  numbadownrisk.py  numbafit.py  numbarisk.py  pyfit.py  pyrisk.py
finsim/portfolio/: __init__.py  create.py  dynamic.py  helper.py  metrics.py  numerics.py  portfolio.py
finsim/portfolio/optimize/: metrics.py  numerics.py  policy.py
finsim/portfolio/optimize/native/: __init__.py  cythonmetrics.c  cythonmetrics.pyx  fortranmetrics-f2pywrappers2.f90  fortranmetrics.f90  fortranmetrics.pyf  fortranmetricsmodule.c  numbametrics.py  pymetrics.py
finsim/retrieve_stock_symbols_cli/: cli.py
finsim/schemas/: portfolios.py
finsim/simulation/: numbastock.py  stock.py
finsim/simulation/native/: brownian.f90  brownian.pyf
finsim/tech/: ma.py
script/: retrieve_stock_symbols
src/finsim/data/: __init__.py  finnhub.py
src/finsim/estimate/: fit.py  risk.py
src/finsim/estimate/native/: pyfit.py  pyrisk.py
src/finsim/portfolio/: create.py  dynamic.py  helper.py  portfolio.py
src/finsim/portfolio/optimize/: metrics.py  numerics.py  policy.py
src/finsim/portfolio/optimize/native/: pymetrics.py
src/finsim/retrieve_stock_symbols_cli/: __init__.py  cli.py
src/finsim/schemas/: portfolios.py
src/finsim/simulation/: stock.py
test/: test_data.py  test_downside_risk.py  test_dynamic.py  test_fit.py  test_ma.py  test_metrics.py  test_policy.py  test_portfolio.py  test_risk.py  test_stock_simulations.py
