[build-system]
requires = ["setuptools>=42", "wheel", "numpy >= 1.24.0"]
build-backend = "setuptools.build_meta"

[project]
name = "finsim"
version = "1.2.1"
authors = [
    {name = "Kwan Yuet Stephen Ho", email = "stephenhky@yahoo.com.hk"}
]
description = "Financial simulation and inference"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "LGPL"}
keywords = ["simulation", "finance", "quantitative finance", "inference", "portfolio analysis"]
requires-python = ">=3.10"
classifiers = [
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry"
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "requests>=2.31.0",
    "pandas>=1.5.0",
    "quandl>=3.5.0",
    "tqdm>=4.49.0",
    "tables>=3.8.5",
    "yfinance>=0.2.59",
    "openpyxl>=3.1.0",
    "numba",
    "typing-extensions",
    "pydantic"
]

[project.urls]
Repository = "https://github.com/stephenhky/FinanceSimulation"
Issues = "https://github.com/stephenhky/FinanceSimulation/issues"
Documentation = "https://financesimulation.readthedocs.io"

[tool.setuptools]
packages = [
    "finsim",
    "finsim.data",
    "finsim.estimate",
    "finsim.estimate.native",
    "finsim.simulation",
    "finsim.portfolio",
    "finsim.portfolio.optimize",
    "finsim.portfolio.optimize.native",
    "finsim.tech",
    "finsim.retrieve_stock_symbols_cli",
    "finsim.schemas"
]
zip-safe = false
include-package-data = true
package-dir = {"" = "src"}

[project.scripts]
retrieve_stock_symbols = "finsim.retrieve_stock_symbols_cli:main_cli"

[project.optional-dependencies]
test = ["unittest2", "pytest"]
docs = ["sphinx>=4.0.0", "sphinx-rtd-theme>=1.0.0"]
